Comment out build and SonarQube publish steps
Commented out build and SonarQube publish steps in the workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,9 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # - name: Build
+
+      # - name: SonarQube publish
+      #   uses: 
+        
