--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -17,8 +17,9 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17'
-
+          
       - name: Cache SonarQube packages
         uses: actions/cache@v3
         with:
