Update SonarQube quality gate action version
Updated SonarQube quality gate action to use the latest master branch and added polling timeout.

--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -45,10 +45,11 @@ jobs:
     needs: build-and-analyze
     steps:
       - name: Wait for Quality Gate result
-        uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
+        uses: sonarsource/sonarqube-quality-gate-action@master
         with:
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
+          pollingTimeoutSec: 600
         env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   deploy:
