Upgrade SonarQube quality gate action version
Updated SonarQube quality gate action to version 1.1.0 and adjusted parameters.

--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -45,12 +45,17 @@ jobs:
     needs: build-and-analyze
     steps:
       - name: Wait for Quality Gate result
-        uses: sonarsource/sonarqube-quality-gate-action@master
+        uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
         with:
-          pollingTimeoutSec: 600
+          sonar-token: ${{ secrets.SONAR_TOKEN }}
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        # uses: sonarsource/sonarqube-quality-gate-action@master
+        # with:
+        #   pollingTimeoutSec: 600
+        # env:
+        #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        #   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   deploy:
     name: Deploy Application
