--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -47,8 +47,10 @@ jobs:
       - name: Wait for Quality Gate result
         uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
         with:
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
+          scanMetadataReportFile: .scannerwork/report-task.txt
+        
         env:
+          sonar-token: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         # uses: sonarsource/sonarqube-quality-gate-action@master
         # with:
