--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -50,7 +50,7 @@ jobs:
           scanMetadataReportFile: .scannerwork/report-task.txt
         
         env:
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         # uses: sonarsource/sonarqube-quality-gate-action@master
         # with:
