Comment out runs-on line in bloqueo-sonar.yml
Comment out the 'runs-on' line for the check-quality-gate job.

--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -41,7 +41,7 @@ jobs:
 
   check-quality-gate:
     name: Check SonarQube Quality Gate
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
     needs: build-and-analyze
     steps:
       - name: Wait for Quality Gate result
