--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -41,23 +41,17 @@ jobs:
 
   check-quality-gate:
     name: Check SonarQube Quality Gate
-    #runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: build-and-analyze
     steps:
-      - name: Wait for Quality Gate result
-        uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
-        # with:
-        #   scanMetadataReportFile: .scannerwork/report-task.txt
-        
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        # uses: sonarsource/sonarqube-quality-gate-action@master
-        # with:
-        #   pollingTimeoutSec: 600
-        # env:
-        #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        #   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    - name: SonarQube Quality Gate check
+      id: sonarqube-quality-gate-check
+      uses: sonarsource/sonarqube-quality-gate-action@master
+      with:
+        pollingTimeoutSec: 600
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   deploy:
     name: Deploy Application
