--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -30,29 +30,30 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v6
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       # - name: Run SonarQube scan
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #   run: |
       #     mvn sonar:sonar \
-      #       -Dsonar.projectKey=my_project_key \
-      #       -Dsonar.host.url=https://sonar.mycompany.com \
-      #       -Dsonar.login=$SONAR_TOKEN
+      #       -Dsonar.projectKey=grimorio11_prueba \
+      #       -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+      #       -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-  check-quality-gate:
-    name: Check SonarQube Quality Gate
-    runs-on: ubuntu-latest
-    needs: build-and-analyze
-    steps:
-    - name: SonarQube Quality Gate check
-      id: sonarqube-quality-gate-check
-      uses: sonarsource/sonarqube-quality-gate-action@master
-      with:
-        pollingTimeoutSec: 600
-        scanMetadataReportFile: target/sonar/report-task.txt
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  # check-quality-gate:
+    # name: Check SonarQube Quality Gate
+    # runs-on: ubuntu-latest
+    # needs: build-and-analyze
+    # steps:
+      - name: SonarQube Quality Gate check
+        id: sonarqube-quality-gate-check
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        with:
+          pollingTimeoutSec: 600
+          scanMetadataReportFile: target/sonar/report-task.txt
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   deploy:
     name: Deploy Application
