--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -26,25 +26,26 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
       
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v6
+      # - name: SonarQube Scan
+      #   uses: SonarSource/sonarqube-scan-action@v6
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - name: Run SonarQube scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # - name: Run SonarQube scan
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   run: |
-      #     mvn sonar:sonar \
-      #       -Dsonar.projectKey=grimorio11_prueba \
-      #       -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-      #       -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.projectKey=grimorio11_prueba \
+            -Dsonar.host.url=SONAR_HOST_URL  \
+            -Dsonar.login=SONAR_TOKEN
 
-  # check-quality-gate:
-    # name: Check SonarQube Quality Gate
-    # runs-on: ubuntu-latest
-    # needs: build-and-analyze
-    # steps:
+  check-quality-gate:
+    name: Check SonarQube Quality Gate
+    runs-on: ubuntu-latest
+    needs: build-and-analyze
+    steps:
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
