--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -19,7 +19,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-          
+      
+      - name: Build with Maven
+        run: mvn clean install    
+      
       - name: Cache SonarQube packages
         uses: actions/cache@v3
         with:
