--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -40,6 +40,7 @@ jobs:
         #   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
           mvn sonar:sonar \
+            -Dsonar.organization=grimorio11 \
             -Dsonar.projectKey=grimorio11_prueba \
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}  \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
