--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -46,25 +46,30 @@ jobs:
             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.java.binaries=target/classes
 
-  check-quality-gate:
-    name: Check SonarQube Quality Gate
-    runs-on: ubuntu-latest
-    needs: build-and-analyze
-    steps:
       - name: SonarQube Quality Gate check
-        id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
-        with:
-          pollingTimeoutSec: 600
-          #scanMetadataReportFile: target/sonar/report-task.txt
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  # check-quality-gate:
+  #   name: Check SonarQube Quality Gate
+  #   runs-on: ubuntu-latest
+  #   needs: build-and-analyze
+  #   steps:
+  #     - name: SonarQube Quality Gate check
+  #       id: sonarqube-quality-gate-check
+  #       uses: sonarsource/sonarqube-quality-gate-action@master
+  #       with:
+  #         pollingTimeoutSec: 600
+  #         #scanMetadataReportFile: target/sonar/report-task.txt
+  #       env:
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   deploy:
     name: Deploy Application
     runs-on: ubuntu-latest
-    needs: check-quality-gate
+    needs: build-and-analyze
     if: success()  # Solo se ejecuta si el job anterior pasó
     steps:
       - name: Deploy to production
