--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: '17'
       
       - name: Build with Maven
-        run: mvn clean install    
+        run: mvn clean install -DskipTests   
       
       - name: Cache SonarQube packages
         uses: actions/cache@v3
@@ -29,22 +29,25 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
       
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v6
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # - name: Run SonarQube scan
+      # - name: SonarQube Scan
+      #   uses: SonarSource/sonarqube-scan-action@v6
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      #   run: |
-      #     mvn sonar:sonar \
-      #       -Dsonar.organization=grimorio11 \
-      #       -Dsonar.projectKey=grimorio11_prueba \
-      #       -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}  \
-      #       -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-      #       -Dsonar.java.binaries=target/classes
+      - name: Run SonarCloud scan
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.organization=grimorio11 \
+            -Dsonar.projectKey=grimorio11_prueba \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}  \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.java.binaries=.
+
+      - name: Verificar archivos compilados
+        run: ls -l . # target/classes
 
       - name: SonarQube Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@master
