--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,19 @@
+# Identificación del proyecto
 sonar.projectKey=grimorio11_prueba
 sonar.organization=grimorio11
+sonar.projectName=Grimorio11 Prueba
+sonar.projectVersion=1.0
 
+# Rutas del código fuente
+sonar.sources=src/main/java
+sonar.tests=src/test/java
 
-# This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=prueba
-#sonar.projectVersion=1.0
+# Ruta de los archivos compilados
+sonar.java.binaries=target/classes
 
+# Exclusiones opcionales (por ejemplo, archivos de test o mocks)
+# sonar.exclusions=**/test/**,**/mocks/**
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Configuración del servidor
+sonar.host.url=https://sonarcloud.io
+sonar.login=${SONAR_TOKEN}
