--- a/.github/workflows/sonar-test2.yml
+++ b/.github/workflows/sonar-test2.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run SonarCloud scan
         run: |
-          mvn sonar:sonar \
+          mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar\
             -Dsonar.organization=grimorio11 \
             -Dsonar.projectKey=grimorio11_prueba \
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
