--- a/.github/workflows/sonar-test2.yml
+++ b/.github/workflows/sonar-test2.yml
@@ -34,7 +34,8 @@ jobs:
           mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar\
             -Dsonar.organization=grimorio11 \
             -Dsonar.projectKey=grimorio11_prueba \
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            #-Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.java.binaries=target/classes
 
