--- a/.github/workflows/sonar-test2.yml
+++ b/.github/workflows/sonar-test2.yml
@@ -39,7 +39,7 @@ jobs:
             -Dsonar.java.binaries=target/classes
 
       - name: Verificar archivos compilados
-        run: ls -l target/classes
+        run: ls -la target/classes
 
       - name: SonarCloud Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@master
