--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -46,33 +46,33 @@ jobs:
             -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
             -Dsonar.java.binaries=.
 
-      - name: Verificar archivos compilados
-        run: ls -l . # target/classes
+      # - name: Verificar archivos compilados
+      #   run: ls -l . # target/classes
 
+      # - name: SonarQube Quality Gate check
+      #   uses: sonarsource/sonarqube-quality-gate-action@master
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  check-quality-gate:
+    name: Check SonarQube Quality Gate
+    runs-on: ubuntu-latest
+    needs: build-and-analyze
+    steps:
       - name: SonarQube Quality Gate check
+        id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
+        with:
+          pollingTimeoutSec: 600
+          scanMetadataReportFile: ./target/sonar/report-task.txt
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-  # check-quality-gate:
-  #   name: Check SonarQube Quality Gate
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-analyze
-  #   steps:
-  #     - name: SonarQube Quality Gate check
-  #       id: sonarqube-quality-gate-check
-  #       uses: sonarsource/sonarqube-quality-gate-action@master
-  #       with:
-  #         pollingTimeoutSec: 600
-  #         #scanMetadataReportFile: target/sonar/report-task.txt
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   deploy:
     name: Deploy Application
     runs-on: ubuntu-latest
-    needs: build-and-analyze
+    needs: check-quality-gate
     if: success()  # Solo se ejecuta si el job anterior pasó
     steps:
       - name: Deploy to production
