--- a/.github/workflows/bloqueo-sonar.yml
+++ b/.github/workflows/bloqueo-sonar.yml
@@ -59,6 +59,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-analyze
     steps:
+      - name: Busca archivo
+        run: find . -name "report-task.txt"
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
